# anujpy

./: README.md  __init__.py  bomber.py  instagram.py  pyproject.toml
.github/workflows/: publish.yml
