[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anujpy"
version = "0.4.1"  # Naya version
description = "Advanced utility toolkit for Python developers"
readme = "README.md"
authors = [
    {name = "PyAnuj"}
]
license = "MIT"  # Simple string (Warning fix)
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["utilities", "tools", "python", "bomber", "otp"]
requires-python = ">=3.7"
dependencies = [
    "httpx>=0.24.0",
    "requests>=2.28.0",
    "user-agent>=0.1.9",
    "brotli>=1.0.9",
    "colorama>=0.4.6",
    "python-cfonts>=1.5.1"  # Sahi naam ye hai
]

[project.urls]
Homepage = "https://github.com/Anuj6112008/anujpy"
Repository = "https://github.com/Anuj6112008/anujpy.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["anujpy*"]
